styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,400;0,600;0,700;1,400&display=swap');
@import url("https://use.typekit.net/oio2onf.css");

:root{
  --dark-blue: #1A3651;
  --dark-blue-300: #385876;
  --med-blue: #526fa7;  
  --lt-blue: #93bdea;
  --light-gray: #EAECEF;
  --teal: #45C4B0;
  --purple: #955695;

  --body-text: "Barlow Semi Condensed", sans-serif;
  --heading-text: "chainprinter", sans-serif;
  --fw-reg: 400;
  --fw-bold: 700;
}

* {
  box-sizing: border-box;
}

html {
font-size: 62.5% /* using rem for font*/
}

body{
  font-size: calc(1rem + 1vw);
  font-family: var(--body-text);
  /* background-color: var(--dark-blue); */
  /* display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center; */
  height: 100vh;
  margin: 0;
  padding: 0;
}

.main{
  background-color: var(--dark-blue);
}

h1, h2, h3 ,h4 {
  font-family: var(--heading-text);
  font-weight: var(--fw-reg);
  font-style: normal;
  color: var(--dark-blue);
}

a {
  text-decoration: none;
  color: inherit;
}

a:visited {
  /* color: var(--teal); */
}

a:focus {
  border-bottom: #fff;
}

:focus-visible{
  outline: 1px dashed var(--teal);
}

a:active {
  color: var(--teal);
}

img, video, iframe {
  max-inline-size: 100%;
  block-size: auto;
}

/* End of Global Styling */

/* Mobile Nav */

.open-btn{
  position: fixed;
  top: 30px;
  left: 50px;
  color: var(--med-blue);
  z-index: 100;
}

.open-btn:hover{
  color: var(--dark-blue);
}

.close-btn{
  position: absolute;
  top: 25px;
  right: 30px;
  color: var(--med-blue);
  opacity: 0.7;
  transition: opacity 0.2s ease;
}

.close-btn:hover{
  opacity: 1;
}

.nav-btn{
  border: none;
  background-color: transparent;
  cursor: pointer;
  font-size: 2.3rem;
}
.nav {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  transform: translateX(-100%);
  transition: transform 0.3s ease-in-out;
  z-index: 100;
}

.hidden{
  display: none;
}

.nav.visible{
  transform: translateX(0);
}

.nav > .logo{ 
  width: 20rem;
}

.text {
  text-transform: uppercase;
}

.nav-purple{
  background-color: var(--purple);
  width: 60%;
  max-width: 480px;
  min-width: 320px;
  transition-delay: 0.4s;
}

.nav-purple.visible{
  transition-delay: 0s;
}

.nav-teal{
  background-color: var(--teal);
  width: 95%;
  transition-delay: 0.2s;
}

.nav-teal.visible{
  transition-delay: 0.2s;
}

.nav-med-blue{
  background-color: var(--dark-blue);
  width: 95%;
  padding: 40px;
  position: relative;
  transition-delay: 0s;
}

.nav-med-blue.visible{
  transition-delay: 0.4s;
}


.list {
  list-style-type: none;
  padding: 0;
}

.list li {
  margin: 20px;
}

.list li a{
  color: #ffffff;
  opacity: 0.9;
  font-size: 1.2rem;
  text-decoration: none;
  text-transform: uppercase;
}

.list ul {
  list-style-type: none;
  padding-left: 20px;
}

/* End Mobile Nav */

nav{
  background-color: var(--dark-blue);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

nav a{
  width: 100%;
  display: flex;
  align-items: center;
}

nav .logo{
  background-image: url('/assets/images/logo.svg');
  background-size: contain;
  background-repeat: no-repeat;
  margin-left: 2rem;
  height: 5.8rem;
  width: 100%;
}

nav > ul{
  display: flex;
  align-items: center;
  padding: 0 1rem;
  margin-right: 1rem;
  z-index: 10;
}

nav > ul > li{
  display: flex;
  color: #ffffff;
  text-transform: uppercase;
  font-family: var(--body-text);
  font-size: 1.8rem;
  font-weight: 600;
  list-style-type: none;
  padding: 1.2rem;
  margin: 1rem;
  transition: transform .2s ease-in, color 0.3s ease-in;
  cursor: pointer;
  align-items:center;
}

nav > ul > li:hover{
  transform: scale(1.2);
  color: var(--lt-blue);
}

nav svg.icon{
  width: 1em;
  height: 1em;
  font-size: 1em;
  line-height: 100%;
  overflow: visible;
  display: inline-block;
  margin-left: 5px;
  margin-top: 5px;
  transition: all 0.3s ease-in;
}



.more{
  margin-left: 5px;
  display: inline-block;
  animation: 0.2s 1 normal forwards running more;
}

@keyframes more{
  0% {
    transform: rotate(0deg);
  }
  
  100% {
    transform: rotate(180deg);
  }
}



.drop-down:hover > .animate{
  margin-left: 5px;
  animation: 0.4s 1 normal forwards running more;
  scale: 1;
}

.nav-dropdown{
  /* Add in dropdown menu */
  display: flex;
  flex-direction: column;
  position: absolute;
  padding: 1rem;
  top: 5rem;
  border-radius: 0.25em;
  background-color: #fff;
  color: var(--dark-blue);
  box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5);
  visibility: hidden;
}

.nav-dropdown.visible{
  visibility: visible;
  animation: fade-in-top 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
}

.nav-dropdown li{
  list-style: none;
  color: var(--dark-blue);
  padding: 1.2rem;
}
.dropdown{
  color: var(--dark-blue);
  font-family: var(--body-text);
}

/* Navigation Style End */

/* Hero Carousel */
section.hero{
  position:relative;
  background-color: var(--light-gray);
  color: var(--dark-blue);
  margin: 0.7rem 2rem;
  height: 700px;
  border-radius: 8px;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  box-shadow:
  12.5px 12.5px 17.2px -38px rgba(0, 0, 0, 0.025),
  100px 100px 137px -38px rgba(0, 0, 0, 0.05);
}

/* Main page Title-section Styling */
.title-section{
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items:center;
  justify-content: center;
  padding-bottom: 7rem;
  height: 80%;
  width: 100%;
}

.title-section h1{
  font-size: 2.2em;
  font-weight: 700;
  margin-bottom: 0;
  z-index: 100;
}

.title-section h2 {
  z-index: 100;
  font-size: 1.2em;
  color:var(--dark-blue-300);
  letter-spacing: -1px;
}

.title-section{
  overflow: hidden;
}
.image-container {
  position:relative;
  width: 100%;
  height: 100%;
  opacity: 0.2;
  display: flex;
  transform: translateX(0);
  transition: transform 0.5s ease-in-out;
}

img.carousel-img{
  display: none;
  min-width: 500px;
  width: 100%;
  object-fit: cover;
}
/* ... */

